# LibLinuxTray

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: qtthreadmanager.h  sni_wrapper.h  statusnotifieritem.h
src/: exemple.c  main.cpp  qtthreadmanager.cpp  sni_wrapper.cpp  statusnotifieritem.cpp
